16-ash4d-origin/origin.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: origin
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: origin
  type: ClusterIP
