16-ash4d-origin/origin.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: origin
spec:
  ingressClassName: traefik
  rules:
  - host: origin.ash4d.com
    http:
      paths:
      - backend:
          service:
            name: origin
            port:
              number: 80
        path: /
        pathType: Prefix
